--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -14,6 +14,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    column-gap: 1em;
 
     transition:
         top 100ms,
@@ -37,6 +38,11 @@ nav ol {
     width: 50%;
 
     white-space: nowrap;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 0.5em;
 }
 
 nav ol li {
@@ -53,8 +59,6 @@ nav ol li a {
 }
 
 nav .nav-bar-subheading {
-    margin: 0 0 0 1em;
-
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
